.happypack/s--1949087993
SyntaxError: Expected corresponding JSX closing tag for <br> (109:25)

  107 |                                                   7652 Bucharest,<br>
  108 |                                                   Romania
> 109 |                   							</p>
      |                   							^
  110 |                   						</div>
  111 |                   		        	</div>
  112 |                                       <div class="info info-horizontal">

Error
    at transpile (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:274:9
    at /Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:330:17
    at Object.callback (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/fnOncePedantic.js:10:15)
    at Object.module.exports (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/eslint-loader/index.js:182:8)
    at applySyncOrAsync (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)